--- a/inventario/apps/products/templates/Generic.html
+++ b/inventario/apps/products/templates/Generic.html
@@ -8,7 +8,7 @@
     {% load staticfiles %}
     <!-- <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script> -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script> -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script> -->
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" id="bootstrap-css">
@@ -31,7 +31,7 @@
         <div class="row display-table-row">
             <div class="col-md-2 col-sm-1 hidden-xs display-table-cell v-align box" id="navigation">
                 <div class="logo">
-                    <a hef="home.html"><img src="{% static 'img/logo.png'%}" alt="merkery_logo" class="hidden-xs hidden-sm">
+                    {% comment %} <a hef="home.html"><img src="{% static 'img/logo.png'%}" alt="merkery_logo" class="hidden-xs hidden-sm"> {% endcomment %}
                         <img src="{% static 'img/circle-logo.png'%}" alt="merkery_logo" class="visible-xs visible-sm circle-logo">
                     </a>
                 </div>
@@ -69,7 +69,10 @@
                                 <ul class="list-inline header-top pull-right">
                                     <li class="hidden-xs">
                                         {% comment %} <a href="#" class="add-project" data-toggle="modal" data-target="#create_product">Agregar Producto</a> {% endcomment %}
-                                        <a class="btn btn-primary" data-toggle="modal" data-target="#create_product">Crear Producto</a>
+                                        <!-- <a class="btn btn-primary" data-toggle="modal" data-target="#create_product">Crear Producto</a> -->
+                                        <button class="btn btn-primary" type="button" onclick="abrir_modal_creacion('{% url 'createp' %}')">Crear Producto</button>
+
+
                                     </li>
                                     <li>
                                         <a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>
@@ -183,6 +186,12 @@
     </div>
 </body>
 <!--End Body Main Generic-->
+<div class="modal fade" id="creacion" role="dialog">
+
+</div>
+<div class="modal fade" id="edicion" role="dialog">
+
+</div>
 {% comment %}
 <script type="text/javascript">
     $(document).ready(function() {
@@ -191,5 +200,21 @@
         });
     });
 </script> {% endcomment %}
+
+<script type="text/javascript">
+    var $ = jQuery.noConflict();
+
+    function abrir_modal_editar(url) {
+        $('#edicion').load(url, function() {
+            $(this).modal('show');
+        });
+    }
+
+    function abrir_modal_creacion(url) {
+        $('#creacion').load(url, function() {
+            $(this).modal('show');
+        });
+    }
+</script>
 
 </html>
