--- a/inventario/apps/products/templates/home/home.html
+++ b/inventario/apps/products/templates/home/home.html
@@ -21,19 +21,19 @@
       </div>
     <div class="container">
       <div class="row">
-        <table id="example" class="table table-striped table-bordered table-hover table-sm table-responsive" style="width:100%">
+         <table id="example" class="table table-striped table-bordered table-hover table-sm table-responsive" style="width:100%">
             <thead>
                 <tr>
                     <th><input type="checkbox" onclick="checkAll(this)"></th>
                     <th scope="col">Imagen</th>
                     <th scope="col">Codigo</th>
                     <th scope="col">Proveedor</th>
-                    <th scope="col">Description</th>
-                    <th scope="col">buy_price</th>
-                    <th scope="col">sale_price</th>
-                    <th scope="col">categoryProduct</th>
+                    <th scope="col">Descripcion</th>
+                    <th scope="col">Precio Compra</th>
+                    <th scope="col">Precio Venta</th>
+                    <th scope="col">Categoria</th>
                     <th scope="col">Almacen</th>
-                    <th scope="col">IsActive</th>
+                    <th scope="col">Activo</th>
                     <th scope="col">Stock</th>
                     <th scope="col">Acciones</th>
                 </tr>
@@ -52,8 +52,8 @@
                       <td>{{product.id}}</td>
                       <td>{{product.productProvider }}</td>
                       <td>{{product.description}}</td>
-                      <td>{{product.buy_price}}</td>
-                      <td>{{product.sale_price}}</td>
+                      <td>{{product.buy_price|floatformat}}</td>
+                      <td>{{product.sale_price|floatformat}}</td>
                       <td>
                         <span class="badge badge-pill badge-primary">{{product.categoryProduct}}</span>
                       </td>
@@ -70,29 +70,29 @@
                         <span class="badge badge-pill badge-success">{{product.stock}}</span>
                       </td>
                       <td>
-                        <button class="btn btn-sm btn-primary">Editar</button>
-                        <button class="btn btn-sm btn-danger">Delete</button>
+                        <button class="btn btn-sm btn-primary" onclick="abrir_modal_editar('{% url 'update'  product.id%}')">Editar</button>
+                        <button class="btn btn-sm btn-danger" onclick="abrir_modal_delete('{% url 'delete'  product.id%}')">Delete</button>
                       </td>
                   </tr>
               {% endfor %}
               </tbody>
             <tfoot>
                 <tr>
-                    <th></th>
+                    <th><input type="checkbox" onclick="checkAll(this)"></th>
                     <th scope="col">Imagen</th>
                     <th scope="col">Codigo</th>
                     <th scope="col">Proveedor</th>
-                    <th scope="col">Description</th>
-                    <th scope="col">buy_price</th>
-                    <th scope="col">sale_price</th>
-                    <th scope="col">categoryProduct</th>
+                    <th scope="col">Descripcion</th>
+                    <th scope="col">Precio Compra</th>
+                    <th scope="col">Precio Venta</th>
+                    <th scope="col">Categoria</th>
                     <th scope="col">Almacen</th>
-                    <th scope="col">IsActive</th>
+                    <th scope="col">Activo</th>
                     <th scope="col">Stock</th>
                     <th scope="col">Acciones</th>
                 </tr>
             </tfoot>
-        </table>
+        </table> 
       </div>
     </div>
   {% comment %} </div> {% endcomment %}
