--- a/inventario/apps/products/templates/home/home.html
+++ b/inventario/apps/products/templates/home/home.html
@@ -1,123 +1,135 @@
-{% extends "generic.html" %} 
-{% block content %}
+{% extends "generic.html" %} {% block content %}
 <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
 <script src="https://cdn.datatables.net/1.10.16/js/dataTables.bootstrap4.min.js"></script>
 <!-- Main Content -->
 
-  
-  {% comment %} <div class="container-fluid" > {% endcomment %}
+
+{% comment %}
+<div class="container-fluid"> {% endcomment %}
     <h1>Hello, JS</h1>
-      <div class="row">
+    <div class="row">
         <div class="col-md-5 col-sm-5 col-xs-12 gutter">
-          <div class="sales">
-              <h2> Tus ventas Hoy : $ 380.200 </h2>
-          </div>
+            <div class="sales">
+                <h2> Tus ventas Hoy : $ 380.200 </h2>
+            </div>
         </div>
         <div class="col-md-7 col-sm-7 col-xs-12 gutter">
-          <div class="sales report">
-              <h2>Almacen Actual : Local 1</h2>
-          </div>
+            <div class="sales report">
+                <h2>Almacen Actual :</h2>
+                <select name="selectWarehouses">
+                    <option value="value1" select>Todos</option> 
+                    {% for warehouse in almacen  %}
+                    <option value="{{warehouse.descriptionWarehouse}}">{{warehouse.descriptionWarehouse}}</option>
+                    {% endfor %}
+                </select>
+            </div>
         </div>
-      </div>
+    </div>
     <div class="container">
-      <div class="row">
-         <table id="example" class="table table-striped table-bordered table-hover table-sm table-responsive" style="width:100%">
-            <thead>
-                <tr>
-                    <th><input type="checkbox" onclick="checkAll(this)"></th>
-                    <th scope="col">Imagen</th>
-                    <th scope="col">Codigo</th>
-                    <th scope="col">Proveedor</th>
-                    <th scope="col">Descripcion</th>
-                    <th scope="col">Precio Compra</th>
-                    <th scope="col">Precio Venta</th>
-                    <th scope="col">Categoria</th>
-                    <th scope="col">Almacen</th>
-                    <th scope="col">Activo</th>
-                    <th scope="col">Stock</th>
-                    <th scope="col">Acciones</th>
-                </tr>
-            </thead>
-              <tbody>
-                {% for product in object_list %}
-                  <tr>
+        <div class="row">
+            <table id="example" class="table table-striped table-bordered table-hover table-sm table-responsive" style="width:100%">
+                <thead>
+                    <tr>
+                        <th><input type="checkbox" onclick="checkAll(this)"></th>
+                        <th scope="col">Imagen</th>
+                        <th scope="col">Codigo</th>
+                        <th scope="col">Proveedor</th>
+                        <th scope="col">Descripcion</th>
+                        <th scope="col">Precio Compra</th>
+                        <th scope="col">Precio Venta</th>
+                        <th scope="col">Categoria</th>
+                        <th scope="col">Almacen</th>
+                        <th scope="col">Activo</th>
+                        {% comment %}
+                        <th scope="col">Stock</th> {% endcomment %}
+                        <th scope="col">Acciones</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for product in productos %}
+                    <tr>
                         <td><input type="checkbox" name=""></td>
-                      {% comment %} <th scope="row">
-                        <label class="custom-control custom-checkbox m-0 p-0">
+                        {% comment %}
+                        <th scope="row">
+                            <label class="custom-control custom-checkbox m-0 p-0">
                           <input type="checkbox" class="custom-control-input table-select-row">
                           <span class="custom-control-indicator"></span>
                         </label>
-                      </th> {% endcomment %}
-                      <td>Image</td>
-                      <td>{{product.id}}</td>
-                      <td>{{product.productProvider }}</td>
-                      <td>{{product.description}}</td>
-                      <td>{{product.buy_price|floatformat}}</td>
-                      <td>{{product.sale_price|floatformat}}</td>
-                      <td>
-                        <span class="badge badge-pill badge-primary">{{product.categoryProduct}}</span>
-                      </td>
-                      <td>{{product.get_warehouse}}</td>
-                      <td>
-                      {% if product.isActive%}
-                        <span class="badge badge-pill badge-success">Active</span>
-                      {% else %}
-                        <span class="badge badge-pill badge-Secondary">Inactiv</span>
-                      {% endif %}
+                        </th> {% endcomment %}
+                        <td>Image</td>
+                        <td>{{product.id}}</td>
+                        <td>{{product.productProvider }}</td>
+                        <td>{{product.description}}</td>
+                        <td>{{product.buy_price|floatformat}}</td>
+                        <td>{{product.sale_price|floatformat}}</td>
+                        <td>
+                            <span class="badge badge-pill badge-primary">{{product.categoryProduct}}</span>
+                        </td>
+                        <td>{{product.get_warehouse}}</td>
+                        <td>
+                            {% if product.isActive%}
+                            <span class="badge badge-pill badge-success">Active</span> {% else %}
+                            <span class="badge badge-pill badge-Secondary">Inactiv</span> {% endif %}
 
-                      </td>
-                      <td>
-                        <span class="badge badge-pill badge-success">{{product.stock}}</span>
-                      </td>
-                      <td>
-                        <button class="btn btn-sm btn-primary" onclick="abrir_modal_editar('{% url 'update'  product.id%}')">Editar</button>
-                        <button class="btn btn-sm btn-danger" onclick="abrir_modal_delete('{% url 'delete'  product.id%}')">Delete</button>
-                      </td>
-                  </tr>
-              {% endfor %}
-              </tbody>
-            <tfoot>
-                <tr>
-                    <th><input type="checkbox" onclick="checkAll(this)"></th>
-                    <th scope="col">Imagen</th>
-                    <th scope="col">Codigo</th>
-                    <th scope="col">Proveedor</th>
-                    <th scope="col">Descripcion</th>
-                    <th scope="col">Precio Compra</th>
-                    <th scope="col">Precio Venta</th>
-                    <th scope="col">Categoria</th>
-                    <th scope="col">Almacen</th>
-                    <th scope="col">Activo</th>
-                    <th scope="col">Stock</th>
-                    <th scope="col">Acciones</th>
-                </tr>
-            </tfoot>
-        </table> 
-      </div>
+                        </td>
+                        {% comment %}
+                        <td>
+                            <span class="badge badge-pill badge-success">{{product.stock}}</span>
+                        </td> {% endcomment %}
+                        <td>
+                            <button class="btn btn-sm btn-primary" onclick="abrir_modal_editar('{% url 'update'  product.id%}')">Editar</button>
+                            <button class="btn btn-sm btn-danger" onclick="abrir_modal_delete('{% url 'delete'  product.id%}')">Delete</button>
+                        </td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <th><input type="checkbox" onclick="checkAll(this)"></th>
+                        <th scope="col">Imagen</th>
+                        <th scope="col">Codigo</th>
+                        <th scope="col">Proveedor</th>
+                        <th scope="col">Descripcion</th>
+                        <th scope="col">Precio Compra</th>
+                        <th scope="col">Precio Venta</th>
+                        <th scope="col">Categoria</th>
+                        <th scope="col">Almacen</th>
+                        <th scope="col">Activo</th>
+                        {% comment %}
+                        <th scope="col">Stock</th> {% endcomment %}
+                        <th scope="col">Acciones</th>
+                    </tr>
+                </tfoot>
+            </table>
+        </div>
     </div>
-  {% comment %} </div> {% endcomment %}
+    {% comment %} </div> {% endcomment %}
 <!-- Main Content -->
 
 <script type="text/javascript">
-$(document).ready(function() {
-    $('#example').DataTable(
-        
-         {     
-
-      "aLengthMenu": [[5, 10, 25, -1], [5, 10, 25, "All"]],
-        "iDisplayLength": 5
-       } 
+    $(document).ready(function() {
+        $('#example').DataTable(
+            {
+                "aLengthMenu": [
+                    [5, 10, 25, -1],
+                    [5, 10, 25, "All"]
+                ],
+                "iDisplayLength": 5
+            }
         );
-} );
+        $("select[name=selectWarehouses]").change(function(){
+            alert($('select[name=selectWarehouses]').val());
+        });
+    });
 
-function checkAll(bx) {
-  var cbs = document.getElementsByTagName('input');
-  for(var i=0; i < cbs.length; i++) {
-    if(cbs[i].type == 'checkbox') {
-      cbs[i].checked = bx.checked;
+    function checkAll(bx) {
+        var cbs = document.getElementsByTagName('input');
+        for (var i = 0; i < cbs.length; i++) {
+            if (cbs[i].type == 'checkbox') {
+                cbs[i].checked = bx.checked;
+            }
+        }
     }
-  }
-}
 </script>
 
 {% endblock content%}
